--- a/cxconsts.html
+++ b/cxconsts.html
@@ -9123,7 +9123,7 @@ __  #
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="getbg%2CBackgroundColor"></a>
+<a id="getbg,BackgroundColor"></a>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">getbg</span><span class="Other">(</span><span class="Identifier">bg</span><span class="Other">:</span> <span class="Identifier">BackgroundColor</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -9139,7 +9139,7 @@ __  #
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-06 11:31:57 UTC</small>
+        <small>Made with Nim. Generated: 2018-10-15 12:43:59 UTC</small>
       </div>
     </div>
   </div>
