--- a/cxhash.html
+++ b/cxhash.html
@@ -1274,7 +1274,7 @@ function main() {
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<a id="checkHash%2Cstring%2CT"></a>
+<a id="checkHash,string,T"></a>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">checkHash</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">hsx</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>checkHash</p>
@@ -1282,7 +1282,7 @@ function main() {
 
 
 </dd>
-<a id="verifyHash%2Cstring%2CT"></a>
+<a id="verifyHash,string,T"></a>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">verifyHash</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">hsx</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
 <dd>
 <p>verifyHash</p>
@@ -1290,7 +1290,7 @@ function main() {
 
 
 </dd>
-<a id="createHash%2Cstring"></a>
+<a id="createHash,string"></a>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">createHash</span><span class="Other">(</span><span class="Identifier">kata</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>createHash</p>
@@ -1313,7 +1313,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-06 11:32:04 UTC</small>
+        <small>Made with Nim. Generated: 2018-10-15 12:44:05 UTC</small>
       </div>
     </div>
   </div>
